--- a/web_client/package.json
+++ b/web_client/package.json
@@ -20,7 +20,12 @@
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "@johnn-e/react-mesh-gradient": "^1.1.0",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "lucide-react": "^0.292.0",
+    "normalize-url": "^8.0.0",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "@types/node": "^20",
