--- a/web_client/package.json
+++ b/web_client/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@johnn-e/react-mesh-gradient": "^1.1.0",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
@@ -16,16 +18,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.4",
+    "lucide-react": "^0.292.0",
     "next": "14.2.3",
+    "normalize-url": "^8.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.11.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "@johnn-e/react-mesh-gradient": "^1.1.0",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "lucide-react": "^0.292.0",
-    "normalize-url": "^8.0.0",
-    "react-icons": "^4.11.0"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
